--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseurl = "http://replace-this-with-your-hugo-site.com/"
-languageCode = "en-us"
-title = "My New Hugo Site"
+baseurl = "http://www.mobiledigitalforensics.com/"
+languageCode = "en-gb"
+title = "Mobile Digital Forensics"
